--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+/*
+
+Brett- commented out this stuff, replaced with the css from public/style.css
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -13,4 +17,43 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+*/
+body {
+    background: linear-gradient(180deg, #B9D3E6 0%, #82AAC7 100%);
+    font-family: 'Roboto', sans-serif;
+}
+
+h1 {
+    font-weight: 400;
+}
+
+.read-link {
+    color: #2EB4B0;
+    font-weight: 300;
+    text-decoration: none;
+}
+.read-link:hover {
+  text-decoration: underline;
+  color: #196967;
+}
+
+.content-tab {
+    background-color: #FFFFFF;
+    color: #000000;
+    width: 10px;
+}
+
+.news-link {
+    color: #CAA677;
+    /* clear: both;
+    float: left; */
+}
+.news-link:hover {
+    color: #997545;
+}
+
+.icon-article {
+    float: left;
+    font-size: 250%;
 }
