--- a/src/index.css
+++ b/src/index.css
@@ -19,13 +19,15 @@ code {
     monospace;
 }
 */
-body {
+.body {
     background: linear-gradient(180deg, #B9D3E6 0%, #82AAC7 100%);
     font-family: 'Roboto', sans-serif;
 }
 
-h1 {
-    font-weight: 400;
+
+.section-heading {
+  font-weight: 400;
+  font-size: 200%;
 }
 
 .read-link {
@@ -41,7 +43,7 @@ h1 {
 .content-tab {
     background-color: #FFFFFF;
     color: #000000;
-    width: 10px;
+    max-width: 50em;
 }
 
 .news-link {
