--- a/src/app_component/weather.style.css
+++ b/src/app_component/weather.style.css
@@ -1,4 +1,4 @@
-.container {
+/* .container {
   margin-top: 1.2rem;
 }
 
@@ -12,4 +12,4 @@
   border: none;
   border-bottom: 2px solid tomato;
 }
-
+ */
